# SEM4-SIK-game-client

./: Buffer.cpp  Buffer.h  CMakeLists.txt  Client.cpp  Client.h  ClientParameters.cpp  ClientParameters.h  GameInfo.cpp  GameInfo.h  GuiToServerHandler.cpp  Handlers.h  Makefile  Messages.h  README.md  ServerToGuiHandler.cpp  Utils.h  common.h  err.h
